# ashi

./: .gitignore  README.md  ashi-voice.service  ashi.service  requirements.txt
.understand-anything/: knowledge-graph.json
app/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
docs/: 2026-04-07-ashi-design.md
functions/: action_classifier.py  agent_runner.py  ashi_daemon.py  ashi_skill_cli.py  audit.py  blackboard.py  computer_control.py  context_engine.py  gdrive_tool.py  host_agent.py  ide_controller.py  ingest_source.py  intent.py  memory_manager.py  monitor.py  observe.py  ralph.py  review_task.py  run_shell.py  run_skill.py  secrets.py  self_improve.py  skill_registry.py  skill_scorer.py  sync_plugin_skills.py  task_agent.py  tcu.py  telegram_bot.py  tool_dispatch.py  update_entity.py  vizier_loop.py  voice_daemon.py  wiki.py
memory/: kuzu_graph.py  lancedb_store.py
scripts/: ashi  install_service.sh  install_system_deps.sh  install_voice.sh  setup_computer_control.sh
skills/: code.md  daily-report.md  ingest.md  opencode-task.md  plan.md  registry.json  research.md  review.md  wiki-update.md
tests/: test_action_classifier.py  test_agent_runner.py  test_ashi_daemon.py  test_blackboard.py  test_computer_control.py  test_context_engine.py  test_gdrive_tool.py  test_host_agent.py  test_ingest.py  test_integration_phase1.py  test_intent.py  test_memory.py  test_memory_manager.py  test_ralph.py  test_tcu.py  (+10 more)
(+20 files in other folders)
