[package]
name = "ashi-app"
version = "0.1.0"
description = "ASHI — Local AI OS Desktop App"
authors = ["Abdul Basit"]
edition = "2021"

[lib]
name = "ashi_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
